# giggle-scripts

./: makefile  swin_ir.py
architectures/flash-attention-cpp/: CMakeLists.txt  README.md  flash_attention.cpp  flash_attention.hpp  flash_attention_kernel.cu  test_flash_attention.cpp
model-exports/: swin_ir.py
